NXT-2910: Introducing unified 'ServiceCallException'
Since the FE mostly doesn't need to know what specific exception was thrown
by the BE, 'SpaceService' calls now only throw 'ServiceCallExceptions'.

NXT-2910 (Introduce new known Gateway API exception handling for \)